# grimport

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  FEATURES_TODO.md  PROJECT.it.md  PROJECT.md  README.it.md  README.md  ROADMAP.md  package.json  pnpm-workspace.yaml
.github/workflows/: ci.yml  server-build.yml
crates/portsage-cli/: Cargo.toml
crates/portsage-cli/src/: cli.rs  lib.rs  mcp.rs  output.rs  self_update.rs
crates/portsage-client/src/: client.rs  lib.rs  types.rs
crates/portsage-mcp/: Cargo.toml
crates/portsage-mcp/src/: lib.rs
docs/: ARCHITECTURE.it.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DESIGN.md  ROADMAP.md  feature-proposals.md  multi-host-evolution.md
mcp/: install.sh  server.py
packaging/linux/: README.md  install.sh  portsage-server.service
scripts/: build-cli.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: actions.rs  backends.rs  commands.rs  db.rs  forwards.rs  lib.rs  main.rs  paths.rs  scanner.rs  socket.rs
src/components/: BackendSwitcher.tsx  PopoverPanel.tsx  PortRow.tsx  ProjectDetail.tsx  RemoteBackendsPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  UnmanagedPortsPanel.tsx  WelcomePanel.tsx
src/components/ui/: UIButton.tsx  UIDialog.tsx  UIPortLink.tsx  UITabs.tsx
src/features/backends/: useBackends.ts
src/features/projects/: useProjects.ts
src/lib/: commands.ts  errors.test.ts  errors.ts  types.ts
