[package]
name = "portsage-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Shared install/uninstall/status logic for the Portsage MCP integration with Claude Code"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
